<resources>
    <string name="favorite_title">Canoas horários</string>
    <string name="favorites_title">Suas preferências</string>
    <string name="favorites_content">Favoritos</string>

    <string name="app_name">Canoas! Horários de ônibus</string>
    <string name="text_favorites">Favoritos</string>
    <string name="text_schedules">Horários</string>
    <string name="text_cb">Centro Bairro</string>
    <string name="text_bc">Bairro Centro</string>
    <string name="text_saturday">Sábados</string>
    <string name="text_working_days">Dias úteis</string>
    <string name="text_sunday">Domingos</string>
    <string name="lines_title">Linhas</string>
    <string name="schedules_title">Horários</string>
    <string name="itineraries_title">Itinerários</string>
    <string name="empty_itineraries">Não há itinerários</string>
    <string name="empty_schedules">Não há horários</string>
    <string name="commom_message_error">Ocorreu algum erro, tente novamente mais tarde</string>
    <string name="text_clear_list">Limpar lista</string>
    <string name="cancel">Cancelar</string>
    <string name="vicasa">Vicasa</string>
    <string name="sogal">Sogal</string>
    <string name="origin_city">Município de origem</string>
    <string name="destination_city">Município de destino</string>
    <string name="service_type">Tipo de serviço</string>
    <string name="confirm">Confirmar</string>
    <string name="filter_options">Opções de filtro</string>
    <string name="filter_description">Botão para realizar filtro das linhas de onibus da vicasa</string>
    <string name="error_conection">Parece que ocorreu algum problema, verifique sua conexão e tente novamente</string>
    <string name="no_items">Não há horários</string>
    <string name="home_title">Canoas horários</string>
    <string name="about">Sobre o aplicativo</string>
    <string name="about_content">Este aplicativo tem o intuito de informar os horários de partida dos ônibus seja sentido bairro centro, centro bairro, centro circular ou bairro circular (em Canoas).
        Não tendo nem um vínculo com as empresas de transporte público.
    </string>
    <string name="sogal_wpp">(51) 98194-9917 </string>
    <string name="sogal_residential_phone">(51) 3472-6233</string>
    <string name="contacts">Contatos:</string>
    <string name="vicasa_phone">(51) 3462-3200</string>
    <string name="marcelo_esser">Marcelo Esser</string>
    <string name="lucas_wottrich">Lucas Wottrich</string>
    <string name="github_profile">MarceloEsser</string>
    <string name="gmail_profile">marcelo.v.esser@gmail.com</string>
    <string name="linkedin_profile">Marcelo Esser</string>
    <string name="github_profile_wottrich">Wottrich</string>
    <string name="gmail_profile_wottrich">wottrich78@gmail.com</string>
    <string name="linkedin_profile_wottrich">Lucas Cruz Wottrich</string>
    <string name="cc_way">Centro Circular</string>
    <string name="bb_way">Bairro Circular</string>
    <string name="bc_way">Bairro Centro</string>
    <string name="cb_way">Centro Bairro</string>
    <string name="line_way">Sentido da linha</string>
    <string name="line_code_or_line_name">Código da linha ou nome da linha</string>
    <string name="schedules">Horários</string>
    <string name="itineraries">Itinerários</string>
    <string name="without_lines">Não há linhas</string>
    <string name="line_or_line_way">Linha ou código da linha</string>
    <string name="favorite_image_button">Botão para adicionar ou remover a linha da lista de favoritos</string>
    <string name="delete_confirmation">Você tem certeza de que deseja deletar todas as linhas?</string>
    <string name="yeah_sure">É... acho que sim!</string>
    <string name="nooo">Não</string>
    <string name="lines_deleted">Linhas deletas!</string>
    <string name="bruno_todeschini">Bruno Todeschini</string>
    <string name="github_profile_todeschini">brunotodeschini</string>
    <string name="gmail_profile_todeschini">"obruno1997@gmail.com "</string>
    <string name="linkedin_profile_todeschini">Bruno Todeschini de Oliveira</string>
    <string name="wheelchair_accessible_bus">Acessível para cadeirantes</string>
    <string name="back">Voltar</string>
    <string name="delete_all">Deletar todas as linhas</string>
</resources>
