<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="400dp">

    <TextView
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:text="@string/filter_options"
            android:id="@+id/filter_dialog_tv_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/filter_dialog_ll_content"
            android:padding="15dp"
            android:layout_marginBottom="40dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/filter_dialog_btn_confirm"
            app:layout_constraintTop_toBottomOf="@+id/filter_dialog_tv_title">

        <TextView
                android:id="@+id/filter_dialog_origin_countr_header"
                android:textColor="@color/grey900"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/origin_city"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Spinner
                style="@style/SpinnerStyle"
                app:layout_constraintStart_toStartOf="@id/filter_dialog_origin_countr_header"
                app:layout_constraintTop_toBottomOf="@+id/filter_dialog_origin_countr_header"
                android:layout_marginTop="10dp"
                android:id="@+id/filter_dialog_sp_county_origin"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
        <ImageView
                app:layout_constraintBottom_toBottomOf="@+id/filter_dialog_sp_county_origin"
                app:layout_constraintTop_toTopOf="@+id/filter_dialog_sp_county_origin"
                app:layout_constraintEnd_toEndOf="@id/filter_dialog_sp_county_origin"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_arrow_drop_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/filter_dialog_destination_countr_header"
                android:textColor="@color/grey900"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/destination_city"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@id/filter_dialog_sp_county_origin"
                app:layout_constraintTop_toBottomOf="@+id/filter_dialog_sp_county_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Spinner
                style="@style/SpinnerStyle"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/filter_dialog_destination_countr_header"
                app:layout_constraintTop_toBottomOf="@+id/filter_dialog_destination_countr_header"
                android:id="@+id/filter_dialog_sp_destination_county"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
        <ImageView
                app:layout_constraintBottom_toBottomOf="@+id/filter_dialog_sp_destination_county"
                app:layout_constraintTop_toTopOf="@+id/filter_dialog_sp_destination_county"
                app:layout_constraintEnd_toEndOf="@id/filter_dialog_sp_destination_county"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_arrow_drop_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/filter_dialog_service_type"
                android:text="@string/service_type"
                android:layout_marginTop="20dp"
                android:textColor="@color/grey900"
                android:fontFamily="@font/ubuntu_medium"
                app:layout_constraintStart_toStartOf="@id/filter_dialog_sp_destination_county"
                app:layout_constraintTop_toBottomOf="@+id/filter_dialog_sp_destination_county"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Spinner
                style="@style/SpinnerStyle"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/filter_dialog_service_type"
                app:layout_constraintTop_toBottomOf="@+id/filter_dialog_service_type"
                android:id="@+id/filter_dialog_sp_service_type"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
        <ImageView
                app:layout_constraintBottom_toBottomOf="@+id/filter_dialog_sp_service_type"
                app:layout_constraintTop_toTopOf="@+id/filter_dialog_sp_service_type"
                app:layout_constraintEnd_toEndOf="@id/filter_dialog_sp_service_type"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_arrow_drop_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </android.support.constraint.ConstraintLayout>

    <Button
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_btn_filter_dialog"
            android:textAllCaps="false"
            android:text="@string/cancel"
            android:textColor="@color/red500"
            android:fontFamily="@font/ubuntu_medium"
            android:layout_height="40dp"
            android:id="@+id/filter_dialog_btn_cancel"
            app:layout_constraintEnd_toStartOf="@+id/filter_dialog_btn_confirm"/>

    <Button
            android:textColor="@color/blue600"
            android:fontFamily="@font/ubuntu_medium"
            android:textAllCaps="false"
            android:background="@drawable/background_btn_filter_dialog"
            android:text="@string/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:id="@+id/filter_dialog_btn_confirm"
            app:layout_constraintStart_toEndOf="@+id/filter_dialog_btn_cancel"/>

</android.support.constraint.ConstraintLayout>