<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/BackgroundColor"
        tools:context=".view.activity.sogal.SogalItinerariesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            style="@style/TabBarStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageButton
                android:id="@+id/itineraries_activity_img_btn_back"
                style="@style/IBActionStyle"
                android:contentDescription="@string/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
                style="@style/TitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/itineraries_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/itineraries_activity_img_btn_back"
                app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tab_bar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/transparentWhite"
                app:layout_constraintEnd_toEndOf="@id/itineraries_activity_tv_line_name"
                app:layout_constraintStart_toStartOf="@id/itineraries_activity_tv_line_name"
                app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/itineraries_activity_tv_line_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="LINHAAAAA" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/itineraries_activity_img_lottie_conection"
            app:layout_constraintTop_toBottomOf="@id/tab_bar"
            android:layout_margin="30dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:visibility="gone"
            app:lottie_fileName="wihtout_conection.json"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/itineraries_activity_tv_connection_error"/>

    <com.google.android.material.textview.MaterialTextView
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_bar"
            app:layout_constraintVertical_bias="0.9"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:visibility="gone"
            android:textColor="@color/blueGrey800"
            android:textAlignment="center"
            android:text="@string/error_conection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/itineraries_activity_tv_connection_error"/>

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/itineraries_activity_tv_empty_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_itineraries"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_bar"
            app:layout_constraintVertical_bias="0.3" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itineraries_activity_rv_itineraries"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>